# SLADE

./: .editorconfig  .gitattributes  .gitignore  .readthedocs.yml  .sonarcloud.properties  .travis.yml  AppImageBuilder.yml  CMakeLists.txt  CMakePresets.json  COMPILE.md  CONTRIBUTING.md  Info.plist  README-unix  README.md  SLADE-VS2010.sln  SLADE-VS2012.sln  SLADE-VS2012.vcxproj  SLADE-VS2012.vcxproj.filters  SLADE-osx.icns  SLADE.manifest  SLADE.project  SLADE.rc  SLADE.sln  SLADE.vcxproj  SLADE.vcxproj.filters  SLADE.workspace  SLADE_wsp.mk  Slade3.sln  Slade3.vcproj  appveyor.yml  detect_functions.txt  libmodplug.vcproj  libmodplug.vcxproj  libmodplug.vcxproj.filters  net.mancubus.SLADE.appdata.xml  net.mancubus.SLADE.desktop  net.mancubus.SLADE.metainfo.xml  slade.code-workspace  slade.desktop  stuff.txt  (+2 more)
src/: .clang-format  ACSPrefsPanel.cpp  ACSPrefsPanel.h  ADatArchive.cpp  ADatArchive.h  ANSICanvas.cpp  ANSICanvas.h  ANSIEntryPanel.cpp  ANSIEntryPanel.h  ActionSpecial.cpp  ActionSpecial.h  ActionSpecialDialog.cpp  ActionSpecialDialog.h  ActionSpecialTreeView.cpp  ActionSpecialTreeView.h  AdvancedPrefsPanel.cpp  AdvancedPrefsPanel.h  AnimatedEntryPanel.cpp  AnimatedEntryPanel.h  AnimatedList.cpp  AnimatedList.h  Archive.cpp  Archive.h  ArchiveEntry.cpp  ArchiveEntry.h  ArchiveEntryList.cpp  ArchiveEntryList.h  ArchiveFormats.h  ArchiveManager.cpp  ArchiveManager.h  ArchiveManagerPanel.cpp  ArchiveManagerPanel.h  ArchiveOperations.cpp  ArchiveOperations.h  ArchivePanel.cpp  ArchivePanel.h  Archives.h  Args.h  AudioEntryPanel.cpp  AudioEntryPanel.h  (+411 more)
src/Application/: App.cpp  App.h  Common.h  CommonFwd.h  Main.h  MainApp.cpp  MainApp.h  SLADEWxApp.cpp  SLADEWxApp.h
src/Archive/: Archive.cpp  Archive.h  ArchiveDir.cpp  ArchiveDir.h  ArchiveEntry.cpp  ArchiveEntry.h  ArchiveFormat.cpp  ArchiveFormat.h  ArchiveFormatHandler.cpp  ArchiveFormatHandler.h  ArchiveManager.cpp  ArchiveManager.h  ArchiveTreeNode.cpp  ArchiveTreeNode.h  EntryState.h  MapDesc.h
src/Audio/: AudioTags.cpp  AudioTags.h  MIDIPlayer.cpp  MIDIPlayer.h  ModMusic.cpp  ModMusic.h  Mp3Music.cpp  Mp3Music.h  Music.h
src/Database/: Context.cpp  Context.h  Database.cpp  Database.h  DbUtils.h  Statement.cpp  Statement.h  Transaction.cpp  Transaction.h
src/Dialogs/: AboutDialog.cpp  AboutDialog.h  DirArchiveUpdateDialog.cpp  DirArchiveUpdateDialog.h  ExtMessageDialog.cpp  ExtMessageDialog.h  GfxColouriseDialog.cpp  GfxColouriseDialog.h  GfxConvDialog.cpp  GfxConvDialog.h  GfxCropDialog.cpp  GfxCropDialog.h  GfxTintDialog.cpp  GfxTintDialog.h  MapEditorConfigDialog.cpp  MapEditorConfigDialog.h  MapReplaceDialog.cpp  MapReplaceDialog.h  ModifyOffsetsDialog.cpp  ModifyOffsetsDialog.h  PaletteDialog.cpp  PaletteDialog.h  RunDialog.cpp  RunDialog.h  SScriptDialog.cpp  SScriptDialog.h  TranslationEditorDialog.cpp  TranslationEditorDialog.h
src/Game/: ActionSpecial.cpp  ActionSpecial.h  Args.cpp  Args.h  Configuration.cpp  Configuration.h  Decorate.cpp  Decorate.h  GLDefs.cpp  GLDefs.h  Game.cpp  Game.h  GameConfiguration.cpp  GameConfiguration.h  GenLineSpecial.cpp  GenLineSpecial.h  MapInfo.cpp  MapInfo.h  SpecialPreset.cpp  SpecialPreset.h  ThingType.cpp  ThingType.h  UDMFProperty.cpp  UDMFProperty.h  ZScript.cpp  ZScript.h
src/General/: CVar.cpp  CVar.h  Clipboard.cpp  Clipboard.h  ColourConfiguration.cpp  ColourConfiguration.h  Console.cpp  Console.h  Database.cpp  Database.h  Defs.h  Executables.cpp  Executables.h  Factory.h  JsonFwd.h  KeyBind.cpp  KeyBind.h  Library.cpp  Library.h  ListenerAnnouncer.cpp  ListenerAnnouncer.h  Log.cpp  Log.h  Lua.cpp  MapFormat.cpp  MapFormat.h  MapPreviewData.cpp  MapPreviewData.h  Misc.cpp  Misc.h  ResourceManager.cpp  ResourceManager.h  SAction.cpp  SAction.h  SActionHandler.h  Sigslot.h  UI.cpp  UI.h  UndoRedo.cpp  UndoRedo.h  (+6 more)
src/Geometry/: BBox.cpp  BBox.h  Geometry.cpp  Geometry.h  Plane.cpp  Plane.h  Polygon2D.cpp  Ray.h  Rect.h  RectFwd.h  Vectors.h
src/Graphics/: ANSIScreen.cpp  ANSIScreen.h  GameFormats.h  Graphics.cpp  Graphics.h  Icons.cpp  Icons.h  Translation.cpp  Translation.h  WxGfx.cpp  WxGfx.h
src/Launcher/: IdGames.cpp  IdGames.h  Library.h  Mods.cpp  Mods.h
src/MainEditor/: AnimatedList.cpp  AnimatedList.h  ArchiveOperations.cpp  ArchiveOperations.h  BinaryControlLump.h  ConsoleCommands.cpp  Conversions.cpp  Conversions.h  EntryOperations.cpp  EntryOperations.h  ExternalEditManager.cpp  ExternalEditManager.h  GfxOffsetsClipboardItem.h  MainEditor.cpp  MainEditor.h  MainWindow.cpp  MainWindow.h  Mus2Mid.cpp  Mus2Mid.h  SwitchesList.cpp  SwitchesList.h
src/MapEditor/: ClipboardItems.cpp  ClipboardItems.h  Item.cpp  Item.h  ItemSelection.cpp  ItemSelection.h  MapBackupManager.cpp  MapBackupManager.h  MapChecks.cpp  MapChecks.h  MapClipboardItems.cpp  MapClipboardItems.h  MapEditContext.cpp  MapEditContext.h  MapEditor.cpp  MapEditor.h  MapEditorWindow.cpp  MapEditorWindow.h  MapSpecials.cpp  MapSpecials.h  MapTextureManager.cpp  MapTextureManager.h  NodeBuilders.cpp  NodeBuilders.h  ObjectEdit.cpp  SectorBuilder.cpp  SectorBuilder.h  UndoSteps.cpp  UndoSteps.h
src/OpenGL/: Buffer.h  Camera.cpp  Camera.h  Draw2D.cpp  Draw2D.h  Drawing.cpp  Drawing.h  DrawingFTGL.cpp  DrawingSFML.cpp  Fonts.cpp  Fonts.h  GLHeaders.h  GLTexture.cpp  GLTexture.h  IndexBuffer.cpp  IndexBuffer.h  LineBuffer.cpp  LineBuffer.h  OpenGL.cpp  OpenGL.h  PointSpriteBuffer.cpp  PointSpriteBuffer.h  Shader.cpp  Shader.h  Structs.h  UniformBuffer.h  VertexBuffer2D.cpp  VertexBuffer2D.h  VertexBuffer3D.cpp  VertexBuffer3D.h  VertexBufferBase.h  View.cpp  View.h
src/SLADEMap/: MapObjectCollection.cpp  MapObjectCollection.h  MapSpecials.cpp  MapSpecials.h  MapSpecialsNew.cpp  MapSpecialsNew.h  MobjPropertyList.cpp  MobjPropertyList.h  OldMapSpecials.cpp  OldMapSpecials.h  SLADEMap.cpp  SLADEMap.h  SLADEMapFwd.h  Types.h
src/Scripting/: Lua.cpp  Lua.h  LuaBridge.h  ScriptManager.cpp  ScriptManager.h  Scripting.cpp  Scripting.h  SolUtil.h
src/TextEditor/: Lexer.cpp  Lexer.h  TextLanguage.cpp  TextLanguage.h  TextStyle.cpp  TextStyle.h
src/TextureEditor/: TextureEditor.cpp  (+1 more)
(+1159 files in other folders)
